force-app/main/default/objects/Account/fields/MonthlyRevenueTotalNmb__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRevenueTotalNmb__c</fullName>
    <description>Histórico de Faturamento do mês atual</description>
    <label>Faturamento Mês Corrente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>