force-app/main/default/objects/Account/fields/MonthlySpecialProducts__c.field-meta.xml
<CustomField>
    <fullName>MonthlySpecialProducts__c</fullName>
    <label>CPE Mês Corrente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>