force-app/main/default/objects/Account/fields/NCTotalApprovedNmb__c.field-meta.xml
<CustomField>
    <fullName>NCTotalApprovedNmb__c</fullName>
    <label>NC Total aprovado</label>
    <summarizedField>CreditNote__c.Value__c</summarizedField>
    <summaryFilterItems>
        <field>CreditNote__c.Type__c</field>
        <operation>equals</operation>
        <value>Solicitação</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CreditNote__c.Status__c</field>
        <operation>equals</operation>
        <value>Aprovado</value>
    </summaryFilterItems>
    <summaryForeignKey>CreditNote__c.AccountLkp__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>