force-app/main/default/objects/Account/fields/NCTotalGeneratedNmb__c.field-meta.xml
<CustomField>
    <fullName>NCTotalGeneratedNmb__c</fullName>
    <label>Crédito gerado</label>
    <summarizedField>CreditNote__c.Value__c</summarizedField>
    <summaryFilterItems>
        <field>CreditNote__c.Type__c</field>
        <operation>equals</operation>
        <value>Crédito Campanha</value>
    </summaryFilterItems>
    <summaryForeignKey>CreditNote__c.AccountLkp__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>