force-app/main/default/objects/Account/fields/NCTotalRequestedNmb__c.field-meta.xml
<CustomField>
    <fullName>NCTotalRequestedNmb__c</fullName>
    <label>Valor solicitado</label>
    <summarizedField>CreditNote__c.Value__c</summarizedField>
    <summaryFilterItems>
        <field>CreditNote__c.Type__c</field>
        <operation>equals</operation>
        <value>Solicitação</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CreditNote__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Rejeitado</value>
    </summaryFilterItems>
    <summaryForeignKey>CreditNote__c.AccountLkp__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>