force-app/main/default/objects/Account/fields/NielsenZoneTxtHOMOL__c.field-meta.xml
<CustomField>
    <fullName>NielsenZoneTxtHOMOL__c</fullName>
    <label>Zona Nielsen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>