force-app/main/default/objects/Account/fields/NoticeDescriptionTxt__c.field-meta.xml
<CustomField>
    <fullName>NoticeDescriptionTxt__c</fullName>
    <label>Descrição Agenda / Aviso</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NoticeTxt__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agendamento</fullName>
            </value>
            <value>
                <fullName>Agend. /Area Restrita</fullName>
            </value>
            <value>
                <fullName>Area Restrita</fullName>
            </value>
            <value>
                <fullName>Aviso</fullName>
            </value>
            <value>
                <fullName>Retira</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>