force-app/main/default/objects/Account/fields/NoticeTxt__c.field-meta.xml
<CustomField>
    <fullName>NoticeTxt__c</fullName>
    <label>Agenda / Aviso</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>