force-app/main/default/objects/Account/fields/OperatingAreaTxt__c.field-meta.xml
<CustomField>
    <fullName>OperatingAreaTxt__c</fullName>
    <label>Área de Atuação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interestadual</fullName>
            </value>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>