force-app/main/default/objects/Account/fields/OperationModeTxt__c.field-meta.xml
<CustomField>
    <fullName>OperationModeTxt__c</fullName>
    <label>Forma de Operação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OperationMode</valueSetName>
    </valueSet>
</CustomField>