force-app/main/default/objects/Account/fields/PartnerTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>PartnerTypeTxt__c</fullName>
    <label>Tipo de Parceiro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PGFT</fullName>
                <label>Pagador</label>
            </value>
            <value>
                <fullName>REOR</fullName>
                <label>Recebedor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>