force-app/main/default/objects/Account/fields/PotentialPurchaseNmb__c.field-meta.xml
<CustomField>
    <fullName>PotentialPurchaseNmb__c</fullName>
    <label>Potencial Compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>