force-app/main/default/objects/Account/fields/ProponentMonthlyRevenueNmb__c.field-meta.xml
<CustomField>
    <fullName>ProponentMonthlyRevenueNmb__c</fullName>
    <label>Faturamento Mensal do Proponente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>