force-app/main/default/objects/Account/fields/QuarterRevenueConnectionNmb__c.field-meta.xml
<CustomField>
    <fullName>QuarterRevenueConnectionNmb__c</fullName>
    <description>Histórico de Faturamento de Conexão dos últimos três meses</description>
    <label>Histórico Conexão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>