force-app/main/default/objects/Account/fields/QuarterRevenueIrrigationNmb__c.field-meta.xml
<CustomField>
    <fullName>QuarterRevenueIrrigationNmb__c</fullName>
    <description>Histórico de Faturamento Mix Irriga dos últimos três meses</description>
    <label>Histórico Mix Irriga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>