force-app/main/default/objects/Account/fields/QuarterRevenueRunnerNmb__c.field-meta.xml
<CustomField>
    <fullName>QuarterRevenueRunnerNmb__c</fullName>
    <description>Histórico de Faturamento de produtos Runner dos últimos três meses</description>
    <label>Histórico Produtos Runner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>