force-app/main/default/objects/Account/fields/QuarterRevenueTotalNmb__c.field-meta.xml
<CustomField>
    <fullName>QuarterRevenueTotalNmb__c</fullName>
    <description>Histórico de Faturamento dos últimos três meses</description>
    <label>Histórico Faturamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>