force-app/main/default/objects/Account/fields/QuarterRevenueTubesNmb__c.field-meta.xml
<CustomField>
    <fullName>QuarterRevenueTubesNmb__c</fullName>
    <description>Histórico de Faturamento de Tubos não lançamento dos últimos três meses</description>
    <label>Histórico Tubos - Lançamentos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>