force-app/main/default/objects/Account/fields/ReferenceAccountLkp__c.field-meta.xml
<CustomField>
    <fullName>ReferenceAccountLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta referência</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contas</relationshipLabel>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>