force-app/main/default/objects/Account/fields/Report_1__c.field-meta.xml
<CustomField>
    <fullName>Report_1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>