force-app/main/default/objects/Account/fields/RG_StateInscriptionTxt__c.field-meta.xml
<CustomField>
    <fullName>RG_StateInscriptionTxt__c</fullName>
    <label>RG/Inscrição Estadual</label>
    <length>18</length>
    <type>Text</type>
</CustomField>