force-app/main/default/objects/Account/fields/RiskGroupTxt__c.field-meta.xml
<CustomField>
    <fullName>RiskGroupTxt__c</fullName>
    <defaultValue>&apos;005&apos;</defaultValue>
    <label>Grupo de Risco</label>
    <length>5</length>
    <type>Text</type>
</CustomField>