force-app/main/default/objects/Account/fields/SoccerTeamTxt__c.field-meta.xml
<CustomField>
    <fullName>SoccerTeamTxt__c</fullName>
    <label>Time futebol</label>
    <length>50</length>
    <type>Text</type>
</CustomField>