force-app/main/default/objects/Account/fields/SubfiscalGroupTxt__c.field-meta.xml
<CustomField>
    <fullName>SubfiscalGroupTxt__c</fullName>
    <label>Grupo subfiscal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>