force-app/main/default/objects/Account/fields/SuframaCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>SuframaCodeTxt__c</fullName>
    <label>Código da Suframa</label>
    <length>15</length>
    <type>Text</type>
</CustomField>