force-app/main/default/objects/Account/fields/SuggestedLimit__c.field-meta.xml
<CustomField>
    <fullName>SuggestedLimit__c</fullName>
    <label>Limite Sugerido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>