force-app/main/default/objects/Account/fields/UsedCredit__c.field-meta.xml
<CustomField>
    <fullName>UsedCredit__c</fullName>
    <label>Crédito Utilizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>