force-app/main/default/objects/Account/fields/ValidityDateStatementDte__c.field-meta.xml
<CustomField>
    <fullName>ValidityDateStatementDte__c</fullName>
    <label>Data validade declaração</label>
    <type>Date</type>
</CustomField>