force-app/main/default/objects/Account/fields/XMLEmailTxt__c.field-meta.xml
<CustomField>
    <fullName>XMLEmailTxt__c</fullName>
    <label>Email para XML</label>
    <type>Email</type>
</CustomField>