force-app/main/default/objects/Account/recordTypes/AccountPartner.recordType-meta.xml
<RecordType>
    <fullName>AccountPartner</fullName>
    <active>true</active>
    <description>Para cadastro de endereços de entrega e pagador</description>
    <label>Parceiros de conta</label>
</RecordType>