force-app/main/default/objects/Account/recordTypes/BusinessAccountSAC.recordType-meta.xml
<RecordType>
    <fullName>BusinessAccountSAC</fullName>
    <active>true</active>
    <description>Contas cadastradas pelo SAC no atendimento dos casos.</description>
    <label>Conta jurídica SAC</label>
</RecordType>