force-app/main/default/objects/Account/recordTypes/CampaignGroup.recordType-meta.xml
<RecordType>
    <fullName>CampaignGroup</fullName>
    <active>true</active>
    <description>Agrupamento utilizado na Campanha de Trade Marketing</description>
    <label>Agrupamento de Campanha</label>
</RecordType>