force-app/main/default/objects/Account/recordTypes/CompetitionAccount.recordType-meta.xml
<RecordType>
    <fullName>CompetitionAccount</fullName>
    <active>true</active>
    <label>Conta da Concorrência</label>
</RecordType>