force-app/main/default/objects/Account/recordTypes/PartnerAccount.recordType-meta.xml
<RecordType>
    <fullName>PartnerAccount</fullName>
    <active>true</active>
    <description>Contas criadas para habilitar representantes na comunidade.</description>
    <label>Conta Representante</label>
</RecordType>