force-app/main/default/objects/Account/recordTypes/SAPBusinessAccount.recordType-meta.xml
<RecordType>
    <fullName>SAPBusinessAccount</fullName>
    <active>true</active>
    <description>Contas enviadas do cadastro do SAP. Alterações somente no SAP.</description>
    <label>Conta jurídica SAP</label>
</RecordType>