force-app/main/default/objects/Account/validationRules/ContaValidaCNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>ContaValidaCNPJ</fullName>
    <active>false</active>
    <description>Regra valida se o CNPJ informado é valido ou não.</description>
    <errorConditionFormula>NOT(
    OR(
       LEN(CNPJTxt__c)=0,
       AND( NOT(CNPJTxt__c = &quot;00000000000000&quot;),
       MOD( 
		   MOD(11-MOD(VALUE(MID(CNPJTxt__c,1,1))*5+VALUE(MID(CNPJTxt__c,2,1))*4+VALUE(MID(CNPJTxt__c,3,1))*3+VALUE(MID(CNPJTxt__c,4,1))*2+VALUE(MID(CNPJTxt__c,5,1))*9+VALUE(MID(CNPJTxt__c,6,1))*8+VALUE(MID(CNPJTxt__c,7,1))*7+VALUE(MID(CNPJTxt__c,8,1))*6+VALUE(MID(CNPJTxt__c,9,1))*5+VALUE(MID(CNPJTxt__c,10,1))*4+VALUE(MID(CNPJTxt__c,11,1))*3+VALUE(MID(CNPJTxt__c,12,1))*2,11),11),10) =
           VALUE(MID(CNPJTxt__c,13,1)),
           MOD(MOD(11-MOD(VALUE(MID(CNPJTxt__c,1,1))*6+VALUE(MID(CNPJTxt__c,2,1))*5+VALUE(MID(CNPJTxt__c,3,1))*4+VALUE(MID(CNPJTxt__c,4,1))*3+VALUE(MID(CNPJTxt__c,5,1))*2+VALUE(MID(CNPJTxt__c,6,1))*9+VALUE(MID(CNPJTxt__c,7,1))*8+VALUE(MID(CNPJTxt__c,8,1))*7+VALUE(MID(CNPJTxt__c,9,1))*6+VALUE(MID(CNPJTxt__c,10,1))*5+VALUE(MID(CNPJTxt__c,11,1))*4+VALUE(MID(CNPJTxt__c,12,1))*3+VALUE(MID(CNPJTxt__c,13,1))*2,11),11),10) =
           VALUE(MID(CNPJTxt__c,14,1))
    )))</errorConditionFormula>
    <errorDisplayField>CNPJTxt__c</errorDisplayField>
    <errorMessage>O CNPJ informado não é válido.</errorMessage>
</ValidationRule>