force-app/main/default/objects/Account/validationRules/LimiteSolicitacaoNotaDeCredito.validationRule-meta.xml
<ValidationRule>
    <fullName>LimiteSolicitacaoNotaDeCredito</fullName>
    <active>true</active>
    <description>Impede a criação de solicitações de nota de crédito caso a conta não possua crédito suficiente.</description>
    <errorConditionFormula>NCTotalGeneratedNmb__c  &lt;  NCTotalRequestedNmb__c</errorConditionFormula>
    <errorMessage>O crédito solicitado para essa conta excedeu o crédito disponível.</errorMessage>
</ValidationRule>