force-app/main/default/objects/Account/validationRules/NullAddressFieldsForPartner.validationRule-meta.xml
<ValidationRule>
    <fullName>NullAddressFieldsForPartner</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;AccountPartner&apos; &amp;&amp; 
(BillingStreet = NULL || 
BillingCity = NULL || 
BillingState = NULL || 
BillingPostalCode = NULL)</errorConditionFormula>
    <errorMessage>É necessário preencher todos os campos de endereço.</errorMessage>
</ValidationRule>