force-app/main/default/objects/Account/validationRules/UnavailableREORState.validationRule-meta.xml
<ValidationRule>
    <fullName>UnavailableREORState</fullName>
    <active>false</active>
    <errorConditionFormula>!$Setup.SkipValidations__c.Skip__c &amp;&amp; 
TEXT(PartnerTypeTxt__c)=&apos;REOR&apos; &amp;&amp; Parent.BillingState != BillingState</errorConditionFormula>
    <errorDisplayField>BillingStateCode</errorDisplayField>
    <errorMessage>Não é possível cadastrar um endereço de entrega com Estado diferente do Cliente Emissor.</errorMessage>
</ValidationRule>