force-app/main/default/objects/Account/listViews/Agrupamentos_de_Campanha.listView-meta.xml
<ListView>
    <fullName>Agrupamentos_de_Campanha</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>GroupCodeTxt__c</columns>
    <columns>MainSalesAreaLkp__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.CampaignGroup</value>
    </filters>
    <label>Agrupamentos de Campanha</label>
</ListView>