force-app/main/default/objects/Account/listViews/Contas_Representantes.listView-meta.xml
<ListView>
    <fullName>Contas_Representantes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.PartnerAccount</value>
    </filters>
    <label>Contas Representantes</label>
</ListView>