force-app/main/default/objects/Account/listViews/ContasJuridicasSAC.listView-meta.xml
<ListView>
    <fullName>ContasJuridicasSAC</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CNPJTxt__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.BusinessAccountSAC</value>
    </filters>
    <label>Contas Jurídicas SAC</label>
</ListView>