force-app/main/default/objects/Account/listViews/ContasJuridicasSAP.listView-meta.xml
<ListView>
    <fullName>ContasJuridicasSAP</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CodeCustomerTxt__c</columns>
    <columns>DescriptionIndustryTxt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.SAPBusinessAccount</value>
    </filters>
    <label>Contas Jurídicas SAP</label>
</ListView>