force-app/main/default/objects/Account/listViews/ContasPessoaisSAC.listView-meta.xml
<ListView>
    <fullName>ContasPessoaisSAC</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccountSAC</value>
    </filters>
    <label>Contas Pessoais SAC</label>
</ListView>