force-app/main/default/objects/Account/listViews/ContasPessoaisSAP.listView-meta.xml
<ListView>
    <fullName>ContasPessoaisSAP</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.SAPPersonAccount</value>
    </filters>
    <label>Contas Pessoais SAP</label>
</ListView>